.metadata/.plugins/org.eclipse.cdt.ui/pa3interrupts.build.log
21:19:16 **** Incremental Build of configuration Debug for project pa3interrupts ****
make -j2 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F401xE -DDEBUG -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:4:1: error: stray '\342' in program
 ​​​​​​​{
 ^
../Core/Src/main.c:4:2: error: stray '\200' in program
 ​​​​​​​{
  ^
../Core/Src/main.c:4:3: error: stray '\213' in program
 ​​​​​​​{
   ^
../Core/Src/main.c:4:4: error: stray '\342' in program
 ​​​​​​​{
    ^
../Core/Src/main.c:4:5: error: stray '\200' in program
 ​​​​​​​{
     ^
../Core/Src/main.c:4:6: error: stray '\213' in program
 ​​​​​​​{
      ^
../Core/Src/main.c:4:7: error: stray '\342' in program
 ​​​​​​​{
       ^
../Core/Src/main.c:4:8: error: stray '\200' in program
 ​​​​​​​{
        ^
../Core/Src/main.c:4:9: error: stray '\213' in program
 ​​​​​​​{
         ^
../Core/Src/main.c:4:10: error: stray '\342' in program
 ​​​​​​​{
          ^
../Core/Src/main.c:4:11: error: stray '\200' in program
 ​​​​​​​{
           ^
../Core/Src/main.c:4:12: error: stray '\213' in program
 ​​​​​​​{
            ^
../Core/Src/main.c:4:13: error: stray '\342' in program
 ​​​​​​​{
             ^
../Core/Src/main.c:4:14: error: stray '\200' in program
 ​​​​​​​{
              ^
../Core/Src/main.c:4:15: error: stray '\213' in program
 ​​​​​​​{
               ^
../Core/Src/main.c:4:16: error: stray '\342' in program
 ​​​​​​​{
                ^
../Core/Src/main.c:4:17: error: stray '\200' in program
 ​​​​​​​{
                 ^
../Core/Src/main.c:4:18: error: stray '\213' in program
 ​​​​​​​{
                  ^
../Core/Src/main.c:4:19: error: stray '\342' in program
 ​​​​​​​{
                   ^
../Core/Src/main.c:4:20: error: stray '\200' in program
 ​​​​​​​{
                    ^
../Core/Src/main.c:4:21: error: stray '\213' in program
 ​​​​​​​{
                     ^
../Core/Src/main.c: In function '_write':
../Core/Src/main.c:7:6: error: stray '\342' in program
     {​​​​​​​
      ^
../Core/Src/main.c:7:7: error: stray '\200' in program
     {​​​​​​​
       ^
../Core/Src/main.c:7:8: error: stray '\213' in program
     {​​​​​​​
        ^
../Core/Src/main.c:7:9: error: stray '\342' in program
     {​​​​​​​
         ^
../Core/Src/main.c:7:10: error: stray '\200' in program
     {​​​​​​​
          ^
../Core/Src/main.c:7:11: error: stray '\213' in program
     {​​​​​​​
           ^
../Core/Src/main.c:7:12: error: stray '\342' in program
     {​​​​​​​
            ^
../Core/Src/main.c:7:13: error: stray '\200' in program
     {​​​​​​​
             ^
../Core/Src/main.c:7:14: error: stray '\213' in program
     {​​​​​​​
              ^
../Core/Src/main.c:7:15: error: stray '\342' in program
     {​​​​​​​
               ^
../Core/Src/main.c:7:16: error: stray '\200' in program
     {​​​​​​​
                ^
../Core/Src/main.c:7:17: error: stray '\213' in program
     {​​​​​​​
                 ^
../Core/Src/main.c:7:18: error: stray '\342' in program
     {​​​​​​​
                  ^
../Core/Src/main.c:7:19: error: stray '\200' in program
     {​​​​​​​
                   ^
../Core/Src/main.c:7:20: error: stray '\213' in program
     {​​​​​​​
                    ^
../Core/Src/main.c:7:21: error: stray '\342' in program
     {​​​​​​​
                     ^
../Core/Src/main.c:7:22: error: stray '\200' in program
     {​​​​​​​
                      ^
../Core/Src/main.c:7:23: error: stray '\213' in program
     {​​​​​​​
                       ^
../Core/Src/main.c:7:24: error: stray '\342' in program
     {​​​​​​​
                        ^
../Core/Src/main.c:7:25: error: stray '\200' in program
     {​​​​​​​
                         ^
../Core/Src/main.c:7:26: error: stray '\213' in program
     {​​​​​​​
                          ^
../Core/Src/main.c:10:6: error: stray '\342' in program
     }​​​​​​​
      ^
../Core/Src/main.c:10:7: error: stray '\200' in program
     }​​​​​​​
       ^
../Core/Src/main.c:10:8: error: stray '\213' in program
     }​​​​​​​
        ^
../Core/Src/main.c:10:9: error: stray '\342' in program
     }​​​​​​​
         ^
../Core/Src/main.c:10:10: error: stray '\200' in program
     }​​​​​​​
          ^
../Core/Src/main.c:10:11: error: stray '\213' in program
     }​​​​​​​
           ^
../Core/Src/main.c:10:12: error: stray '\342' in program
     }​​​​​​​
            ^
../Core/Src/main.c:10:13: error: stray '\200' in program
     }​​​​​​​
             ^
../Core/Src/main.c:10:14: error: stray '\213' in program
     }​​​​​​​
              ^
../Core/Src/main.c:10:15: error: stray '\342' in program
     }​​​​​​​
               ^
../Core/Src/main.c:10:16: error: stray '\200' in program
     }​​​​​​​
                ^
../Core/Src/main.c:10:17: error: stray '\213' in program
     }​​​​​​​
                 ^
../Core/Src/main.c:10:18: error: stray '\342' in program
     }​​​​​​​
                  ^
../Core/Src/main.c:10:19: error: stray '\200' in program
     }​​​​​​​
                   ^
../Core/Src/main.c:10:20: error: stray '\213' in program
     }​​​​​​​
                    ^
../Core/Src/main.c:10:21: error: stray '\342' in program
     }​​​​​​​
                     ^
../Core/Src/main.c:10:22: error: stray '\200' in program
     }​​​​​​​
                      ^
../Core/Src/main.c:10:23: error: stray '\213' in program
     }​​​​​​​
                       ^
../Core/Src/main.c:10:24: error: stray '\342' in program
     }​​​​​​​
                        ^
../Core/Src/main.c:10:25: error: stray '\200' in program
     }​​​​​​​
                         ^
../Core/Src/main.c:10:26: error: stray '\213' in program
     }​​​​​​​
                          ^
make: *** [Core/Src/subdir.mk:33: Core/Src/main.o] Error 1
"make -j2 all" terminated with exit code 2. Build might be incomplete.

21:19:17 Build Failed. 64 errors, 0 warnings. (took 1s.329ms)

